--- a/eleks/oracle/cabal.project
+++ b/eleks/oracle/cabal.project
@@ -28,7 +28,8 @@ source-repository-package
     prettyprinter-configurable
     quickcheck-dynamic
     word-array
-  tag: master
+  --master
+  tag: 9bed81228b451bac2caf345930134e0c8e37fa71
 
 -- The following sections are copied from the 'plutus' repository cabal.project at the revision
 -- given above.
@@ -62,11 +63,13 @@ constraints:
   -- breaks eventful even more than it already was
   , persistent-template < 2.12
 
--- Drops an instance breaking our code. Should be released to Hackage eventually.
+-- https://github.com/Quid2/flat/pull/22 fixes a potential exception
+-- when decoding invalid (e.g. malicious) text literals.
 source-repository-package
   type: git
-  location: https://github.com/Quid2/flat.git
-  tag: 95e5d7488451e43062ca84d5376b3adcc465f1cd
+  -- location: https://github.com/Quid2/flat.git
+  location: https://github.com/michaelpj/flat.git
+  tag: ee59880f47ab835dbd73bea0847dab7869fc20d8
 
 -- Needs some patches, but upstream seems to be fairly dead (no activity in > 1 year)
 source-repository-package
@@ -82,15 +85,18 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-crypto.git
-  tag: ce8f1934e4b6252084710975bd9bbc0a4648ece4
+  tag: 07397f0e50da97eaa0575d93bee7ac4b2b2576ec
 
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-base
-  tag: a715c7f420770b70bbe95ca51d3dec83866cb1bd
+  tag: cb0f19c85e5bb5299839ad4ed66af6fa61322cc4
   subdir:
+    base-deriving-via
     binary
     binary/test
+    measures
+    orphans-deriving-via
     slotting
     cardano-crypto-class
     cardano-crypto-praos
@@ -108,7 +114,7 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/ouroboros-network
-  tag: e338f2cf8e1078fbda9555dd2b169c6737ef6774
+  tag: f149c1c1e4e4bb5bab51fa055e9e3a7084ddc30e
   subdir:
     monoidal-synchronisation
     typed-protocols
@@ -141,7 +147,7 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-ledger-specs
-  tag: 6b0fca7a73c317f3af7c14dd4dc38178cc78a6c8
+  tag: 12a0ef69d64a55e737fbf4e846bd8ed9fb30a956
   subdir:
     byron/chain/executable-spec
     byron/crypto
@@ -164,7 +170,7 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-node.git
-  tag: f3ef4ed72894499160f2330b91572a159005c148
+  tag: 3a56ac245c83d3345f81123ec3bb496bb23477a3
   subdir:
     cardano-api
     cardano-node
@@ -173,16 +179,19 @@ source-repository-package
 
 source-repository-package
   type: git
+  location: https://github.com/input-output-hk/optparse-applicative
+  tag: 7497a29cb998721a9068d5725d49461f2bba0e7a
+
+source-repository-package
+  type: git
   location: https://github.com/input-output-hk/Win32-network
-  tag: 94153b676617f8f33abe8d8182c37377d2784bd1
+  tag: 3825d3abf75f83f406c1f7161883c438dac7277d
 
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/hedgehog-extras
-  tag: 8bcd3c9dc22cc44f9fcfe161f4638a384fc7a187
+  tag: edf6945007177a638fbeb8802397f3a6f4e47c14
 
--- The following two dependencies are not mirrored in the
--- stack.yaml file, but they are needed regardless by cabal.
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/goblins
