--- a/eleks/oracle/mutual-bet.cabal
+++ b/eleks/oracle/mutual-bet.cabal
@@ -25,6 +25,8 @@ library
     exposed-modules:
       Contracts.MutualBet
       Contracts.MutualBet.OffChain
+      Contracts.Oracle
+      Pab.Game
     build-depends:
       aeson,
       base >= 4.9 && < 5,
@@ -104,4 +106,19 @@ executable bet-pab
     prettyprinter -any,
     freer-extras -any,
     plutus-ledger -any,
+    plutus-use-cases,
     stm -any,
+
+executable oracle-client
+  main-is: OracleClient.hs
+  hs-source-dirs: pab
+  ghc-options: -Wall
+  build-depends:       
+    aeson -any,
+    base ^>= 4.14.1.0, 
+    bytestring,
+    mutual-bet -any,
+    regex-tdfa ^>= 1.3.1.0,
+    req ^>= 3.9.0, 
+    text, 
+    uuid
