--- a/mlabs/cabal.project
+++ b/mlabs/cabal.project
@@ -7,7 +7,7 @@ packages: ./.
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/plutus.git
-  tag: daf9d475398bd08b088baf35efea4bf5abea1569
+  tag: 1f7a4dc63e521bcfa3fce0c50b1e39b0a78416bb
   subdir: doc
           fake-pab
           freer-extras
@@ -91,8 +91,8 @@ extra-packages: ieee, filemanip
 -- Drops an instance breaking our code. Should be released to Hackage eventually.
 source-repository-package
   type: git
-  location: https://github.com/Quid2/flat.git
-  tag: 95e5d7488451e43062ca84d5376b3adcc465f1cd
+  location: https://github.com/michaelpj/flat.git
+  tag: ee59880f47ab835dbd73bea0847dab7869fc20d8
 
 -- Needs some patches, but upstream seems to be fairly dead (no activity in > 1 year)
 source-repository-package
@@ -108,12 +108,12 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-crypto.git
-  tag: ce8f1934e4b6252084710975bd9bbc0a4648ece4
+  tag: 07397f0e50da97eaa0575d93bee7ac4b2b2576ec
 
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-base
-  tag: a715c7f420770b70bbe95ca51d3dec83866cb1bd
+  tag: cb0f19c85e5bb5299839ad4ed66af6fa61322cc4
   subdir:
     binary
     binary/test
@@ -122,6 +122,9 @@ source-repository-package
     cardano-crypto-praos
     cardano-crypto-tests
     strict-containers
+    measures
+    base-deriving-via
+    orphans-deriving-via
 
 source-repository-package
   type: git
@@ -134,7 +137,7 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/ouroboros-network
-  tag: e338f2cf8e1078fbda9555dd2b169c6737ef6774
+  tag: 877ce057ff6fb086474c8eaad53f2b7f0e0fce6b
   subdir:
     monoidal-synchronisation
     typed-protocols
@@ -153,7 +156,7 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/iohk-monitoring-framework
-  tag: 34abfb7f4f5610cabb45396e0496472446a0b2ca
+  tag: 808724ff8a19a33d0ed06f9ef59fbd900b08553c
   subdir:
     iohk-monitoring
     tracer-transformers
@@ -167,7 +170,7 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-ledger-specs
-  tag: 6b0fca7a73c317f3af7c14dd4dc38178cc78a6c8
+  tag: d5b184a820853c7ba202efd615b8fadca1acb52c
   subdir:
     byron/chain/executable-spec
     byron/crypto
@@ -190,7 +193,7 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-node.git
-  tag: f3ef4ed72894499160f2330b91572a159005c148
+  tag: ed11e8b6429d4af1cb2539460e5cb2283a06b2dc
   subdir:
     cardano-api
     cardano-node
@@ -199,13 +202,18 @@ source-repository-package
 
 source-repository-package
   type: git
+  location: https://github.com/input-output-hk/optparse-applicative
+  tag: 7497a29cb998721a9068d5725d49461f2bba0e7a
+
+source-repository-package
+  type: git
   location: https://github.com/input-output-hk/Win32-network
-  tag: 94153b676617f8f33abe8d8182c37377d2784bd1
+  tag: 3825d3abf75f83f406c1f7161883c438dac7277d
 
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/hedgehog-extras
-  tag: 8bcd3c9dc22cc44f9fcfe161f4638a384fc7a187
+  tag: edf6945007177a638fbeb8802397f3a6f4e47c14
 
 -- The following dependencies are not mirrored in the
 -- stack.yaml file, but they are needed regardless by cabal.
