--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -39,6 +39,9 @@ common common-imports
     , text
     , freer-extras
     , insert-ordered-containers
+    , serialise
+    , cardano-api
+    , cardano-ledger-alonzo
 
 common common-language
     default-extensions:
@@ -94,6 +97,9 @@ library
     Mlabs.Control.Monad.State
     Mlabs.Data.List
     Mlabs.Data.Ord
+    Mlabs.Deploy.Governance
+    Mlabs.Deploy.Nft
+    Mlabs.Deploy.Utils
     Mlabs.Demo.Contract.Burn
     Mlabs.Demo.Contract.Mint
     Mlabs.Emulator.App
@@ -140,6 +146,18 @@ executable mlabs-plutus-use-cases
   import:  common-configs
   main-is: app/Main.hs
   build-depends: mlabs-plutus-use-cases
+
+executable deploy-app
+  import:  common-imports
+  import:  common-language
+  import:  common-configs
+  main-is: deploy-app/Main.hs
+  build-depends: 
+      mlabs-plutus-use-cases
+    , cardano-ledger-alonzo
+    , cardano-api
+    , serialise==0.2.3.0
+    , cardano-api==1.28.0
 
 executable nft-demo
   import:  common-imports
