--- a/MetaLamp/nft-marketplace/cabal.project
+++ b/MetaLamp/nft-marketplace/cabal.project
@@ -214,3 +214,8 @@ source-repository-package
   type: git
   location: https://github.com/input-output-hk/goblins
   tag: cde90a2b27f79187ca8310b6549331e59595e7ba
+
+source-repository-package
+  type: git
+  location: https://github.com/sordina/servant-options
+  tag: aa9338b1925e7bc5d65bad35f02aec8c20f8365b
