--- a/dquadrant/nft/plutus-tokens.cabal
+++ b/dquadrant/nft/plutus-tokens.cabal
@@ -1,5 +1,5 @@
 cabal-version:      2.4
-name:               plutus-tokens
+name:               plutus-market
 version:            0.1.0.0
 
 -- A short (one-line) description of the package.
@@ -58,7 +58,7 @@ library
             -- See Plutus Tx readme
             -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
 
-test-suite tokens-test
+test-suite market-test
   type: exitcode-stdio-1.0
   main-is: Main.hs
   hs-source-dirs: test
@@ -75,12 +75,13 @@ test-suite tokens-test
               -- See Plutus Tx readme
               -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
   build-depends:
+    data-default -any,
     plutus-tx -any,
     plutus-tx-plugin,
     plutus-contract -any,
     plutus-ledger -any,
     plutus-ledger-api -any,
-    plutus-tokens -any,
+    plutus-market -any,
     plutus-pab -any,
     aeson -any,
     lens,
@@ -95,9 +96,9 @@ test-suite tokens-test
     tasty-hunit -any,
     tasty-hedgehog >=0.2.0.0
 
-executable tokens-pab
+executable market-simulation
   main-is: Main.hs
-  hs-source-dirs: pab
+  hs-source-dirs: simulation
   ghc-options:
     -threaded
   default-language: Haskell2010
@@ -112,8 +113,34 @@ executable tokens-pab
     prettyprinter -any,
     freer-extras -any,
     plutus-ledger -any,
-    plutus-tokens,
+    plutus-market,
     text -any,
     containers -any,
     bytestring -any,
     prettyprinter -any
+
+executable market-cli
+  main-is: Main.hs
+  hs-source-dirs: util
+  ghc-options:  -threaded -rtsopts "-with-rtsopts=-T"
+  default-language: Haskell2010
+  build-depends:
+      cardano-api
+    , cardano-ledger-alonzo
+    , plutus-ledger
+    , plutus-ledger-api
+    , bytestring
+    ,  base >= 4.9 && < 5
+    ,text-conversions,
+    serialise -any,
+    plutus-contract -any,
+    plutus-pab -any,
+    aeson -any,
+    freer-simple -any,
+    prettyprinter -any,
+    freer-extras -any,
+    plutus-market,
+    text -any,
+    containers -any,
+    prettyprinter -any
+
